# talkrypt

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  mkdocs.yml
.github/workflows/: audit.yml  compliance.yml  fuzz.yml  miri.yml  pages.yml
android/: .gitignore  build-apk.sh  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/talkrypt/app/: ApkShareServer.kt  BleNearby.kt  BootReceiver.kt  ChatEvents.kt  ChatModels.kt  ChatNet.kt  ChatService.kt  ChatStore.kt  MainActivity.kt  NearbyDiscovery.kt  Qr.kt  QrDecode.kt  QrScanActivity.kt  SessionHub.kt  Sessions.kt  WifiDirectNearby.kt
android/app/src/main/kotlin/com/talkrypt/custody/: CustodyBridge.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml
android/app/src/test/kotlin/com/talkrypt/app/: ChatEventsTest.kt  ChatModelsTest.kt  ChatNetTest.kt  QrDecodeTest.kt  SessionsTest.kt  SmokeTest.kt
assets/icons/: talkrypt.icns
ci/: fips-compliance-check.sh  fips-subtle-check.mjs  fips.Dockerfile
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: advert.rs  b32.rs  contacts.rs  csfc.rs  custody.rs  descriptor.rs  engine.rs  error.rs  friends.rs  handshake.rs  lib.rs  linking.rs  marking.rs  registry.rs  relay.rs  seal.rs  trace.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: account.rs  aead.rs  beacon.rs  error.rs  group.rs  hash.rs  hybrid.rs  identity.rs  kdf.rs  lib.rs  mem.rs  noise.rs  ratchet.rs  selftest.rs  suite.rs  treekem.rs
crates/crypto/src/mls/: hpke.rs  mod.rs  schedule.rs  secret_tree.rs  sign.rs  treemath.rs
crates/crypto/tests/: nist_mlkem_acvp.rs
crates/crypto/tests/data/: nist_mlkem1024_acvp.txt
crates/desktop/: Cargo.toml
crates/desktop/src/: headless.rs  main.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/helper/: Cargo.toml
crates/helper/src/: client.rs  custody.rs  endpoint.rs  error.rs  frame.rs  keychain.rs  lib.rs  parity.rs  protocol.rs  sddl.rs  secretservice.rs  server.rs  store.rs  tpm.rs  wincred.rs  winpipe.rs
crates/helper/tests/: ipc.rs  secretservice.rs  tpm.rs
crates/server/: Cargo.toml
crates/server/src/: keepalive.rs  keystore.rs  lib.rs
crates/topology/: Cargo.toml
crates/topology/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: arti.rs  framing.rs  lib.rs  loopback.rs  multi.rs  nym.rs  tcp.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
docs/: COMPLIANCE.md  CONFORMANCE.md  CSFC.md  DESIGN.md  PACKAGING.md  PLATFORMS.md  POSTURE.md  ROADMAP.md  SECURITY-AUDIT.md  WIRE.md  build-macos-app.sh  entropy-companions.md  hardware-backed-sealing.md  identity-accounts.md  linux-secretservice-test.sh  linux-tpm-test.sh  onboarding.md  packaging-policy.md  requirements-pages.txt
docs/android/: CustodyBridge.kt  README.md
docs/plans/: 0001-foundation.md  0002-mls-pq.md
docs/superpowers/plans/: 2026-06-12-multisession-chats-phase1.md
docs/superpowers/specs/: 2026-06-12-multisession-chats-design.md  2026-06-13-multisession-phase2-persistence.md  2026-06-23-nym-reuse-and-cross-transport-gossip-design.md
docs/wiki/: CLI-Reference.md  Classification-and-Compliance.md  Cryptography.md  Getting-Started.md  Identity-and-Accounts.md  Key-Custody.md  Messaging-and-Transport.md  Packaging-and-Release.md  Platforms-and-Clients.md  README.md  Security-Assurance.md  index.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/ratchet_header/: regression-short-x25519-field
fuzz/fuzz_targets/: beacon_body.rs  descriptor_parser.rs  identity_chain.rs  presentation.rs  ratchet_header.rs  revocation.rs  signed_claim.rs  suite_scheme.rs  wire_reader.rs
packaging/homebrew/: talkrypt.rb
scripts/: audit-deps.sh  build-ios.sh  build-portable.sh  crypto-inventory.sh  gen-icons.sh  hash-dist.sh  package-mobile.sh  package.sh  release.sh  test-lan-bilateral.sh  verify.ps1  verify.sh
