# talkrypt workspace
# E2E-encrypted, post-quantum, forward-secret IRC-like chat over Tor (Arti).
[workspace]
resolver = "2"
members = ["crates/*"]
# `fuzz/` is a cargo-fuzz package built only via `cargo fuzz`, not the workspace.
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.95"
# These crates are private to this application and are NOT published to crates.io
# (opsec-clean, and the workspace uses internal path dependencies). Setting this
# prevents an accidental `cargo publish` and lets cargo-deny exempt the internal
# path-dependency wildcards (see deny.toml `allow-wildcard-paths`).
publish = false

[workspace.dependencies]
# crypto primitives (CNSA 2.0 algorithm set, RustCrypto pure-Rust)
zeroize = { version = "1", features = ["zeroize_derive"] }
subtle = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
tiny-keccak = { version = "2", features = ["kmac"] }
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
ml-kem = { version = "0.2", features = ["deterministic"] }
ml-dsa = "0.1"
# support
thiserror = "1"
# Memory-hardening syscalls (mlock / madvise / prctl / setrlimit) for RAM-capture
# mitigation; unix only at the call sites. (SECURITY-AUDIT R-8.)
libc = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "time"] }
async-trait = "0.1"
# dev
proptest = "1"

# internal
talkrypt-wire = { path = "crates/wire" }
talkrypt-crypto = { path = "crates/crypto" }
talkrypt-transport = { path = "crates/transport" }
talkrypt-core = { path = "crates/core" }
talkrypt-topology = { path = "crates/topology" }
talkrypt-server = { path = "crates/server" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Source-patched `rsa` (RUSTSEC-2023-0071 / Marvin): a locally vendored, hardened
# copy that makes every RSA private-key operation blinded. `rsa` is pulled in only
# transitively under the `tor` feature (Arti's SSH-key parsing); default builds
# contain no `rsa`. Applied to every build/install of this workspace. The full
# rationale and the exact change are in `third-party/rsa/TALKRYPT-PATCH.md`.
[patch.crates-io]
rsa = { path = "third-party/rsa" }
# Source-patched `sqlx-sqlite` (force-unify sqlite linkage under the `nym`
# feature): verbatim sqlx-sqlite 0.8.6 with its `libsqlite3-sys` requirement
# widened to `>=0.30.1, <0.38.0` (the range upstream 0.9.0 already uses). nym-sdk
# pulls sqlx 0.8.6 → sqlx-sqlite =0.8.6, which capped libsqlite3-sys at ^0.30.1
# and collided with Arti's rusqlite 0.39 → ^0.37 over the unique `links="sqlite3"`
# native library. Widening lets BOTH share libsqlite3-sys 0.37 — Arti is NOT
# downgraded. Only pulled into the graph when the `nym` feature is enabled.
# Rationale in third-party/sqlx-sqlite/Cargo.toml.
sqlx-sqlite = { path = "third-party/sqlx-sqlite" }
# Source-patched `superboring` (preserve nym's PQ-JWT, unify ml-dsa, no
# downgrade): verbatim superboring 0.1.11 with its `ml-dsa` requirement widened
# from the conservative `=0.1.0-rc.11` to `^0.1`. 0.1.11's mldsa code already
# uses the released ml-dsa API, so it compiles against 0.1.1 — the SAME version
# talkrypt's own ML-DSA-87 identity uses. Cargo can't carry both rc.11 and 0.1.1
# (one 0.1.x slot), so without this the nym graph and our crypto are
# irreconcilable. Only in the graph under the `nym` feature. Rationale in
# third-party/superboring/Cargo.toml.
superboring = { path = "third-party/superboring" }
