[package]
name = "talkrypt-cli"
publish.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "talkrypt"
path = "src/main.rs"

[dependencies]
talkrypt-core.workspace = true
talkrypt-crypto.workspace = true
talkrypt-transport.workspace = true
talkrypt-topology.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "time"] }
clap = { version = "4", features = ["derive"] }
# Render invites / linking URIs as scannable QR in the terminal (in-person pairing).
qrcode = { version = "0.14", default-features = false }

[features]
default = []
# Build the inner-layer crypto against the FIPS-validated backend.
fips = ["talkrypt-crypto/fips"]
# Run over real Tor (Arti): onion hosting + dialing. Pulls the large Arti tree.
tor = ["talkrypt-transport/tor"]
# Enable classification handling-markings (off in consumer builds; on in builds
# intended for that audience). Receiving/displaying a marking always works; this
# gates *originating* a channel classification.
markings = []
