[package]
name = "talkrypt-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
talkrypt-wire.workspace = true
talkrypt-crypto.workspace = true
talkrypt-transport.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
rand.workspace = true
# Argon2id for password-gated channels (mixes a channel password into the root).
argon2 = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
