[package]
name = "talkrypt-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
talkrypt-wire.workspace = true
zeroize.workspace = true
subtle.workspace = true
rand_core.workspace = true
sha2.workspace = true
sha3.workspace = true
hkdf.workspace = true
tiny-keccak.workspace = true
aes-gcm.workspace = true
x25519-dalek.workspace = true
ml-kem.workspace = true
ml-dsa.workspace = true
rand.workspace = true
thiserror.workspace = true

# Optional FIPS-validatable AEAD/hash backend (enabled by the `fips` feature).
aws-lc-rs = { version = "1", optional = true }

[features]
default = []
# Route AES-256-GCM through aws-lc-rs (its FIPS-validated module). For an
# actual FIPS 140-3 build, additionally enable `aws-lc-rs/fips`, which requires
# the FIPS build toolchain. This feature selects the backend; it does not by
# itself constitute validation.
fips = ["dep:aws-lc-rs"]
# Use SHA-2 (SHA-384) for the KDF/fingerprint instead of the default SHA3-384,
# for strict CNSA 2.0 hash alignment.
cnsa-sha2 = []

[dev-dependencies]
proptest.workspace = true
