[package]
name = "talkrypt-ffi"
publish.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "talkrypt_ffi"
# `lib` for bindgen + host tests; cdylib/staticlib for Android/iOS/desktop linking.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
talkrypt-core.workspace = true
talkrypt-crypto.workspace = true
talkrypt-transport.workspace = true
talkrypt-topology.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "net"] }
thiserror.workspace = true
zeroize.workspace = true
uniffi = { version = "0.31", features = ["cli"] }

[features]
default = []
# Run over real Tor (Arti). Pulls the large Arti tree into the .so.
tor = ["talkrypt-transport/tor"]
# Run over the Nym mixnet. Pulls the (large) nym-sdk tree into the .so; the
# `host_nym`/`join_nym` constructors multi-home over Tor+Nym. Verified to
# cross-compile to aarch64-linux-android. Opt-in (heavy), so not default.
nym = ["talkrypt-transport/nym"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
