[package]
name = "talkrypt-helper"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "talkrypt-helper"
path = "src/bin/talkrypt-helper.rs"

[dependencies]
# Reuses the audited talkrypt Rust core — NO second-language reimplementation.
talkrypt-core.workspace = true
talkrypt-crypto.workspace = true
talkrypt-server.workspace = true
talkrypt-wire.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net", "fs"] }
thiserror.workspace = true
zeroize.workspace = true

# macOS OS-keystore (Keychain) custody tier — login keychain generic passwords
# (no entitlement needed, unlike Secure Enclave).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

# Windows Named-Pipe transport with an SDDL ACL bound to the current SID.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net", "fs", "time"] }
