[package]
name = "talkrypt-helper"
publish.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "talkrypt-helper"
publish.workspace = true
path = "src/bin/talkrypt-helper.rs"

[dependencies]
# Reuses the audited talkrypt Rust core — NO second-language reimplementation.
talkrypt-core.workspace = true
talkrypt-crypto.workspace = true
talkrypt-server.workspace = true
talkrypt-wire.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net", "fs", "process"] }
thiserror.workspace = true
zeroize.workspace = true

[features]
# HardwareBacked custody tier via a TPM 2.0, sealing through the `tpm2-tools`
# CLI (real TPM2 seal/unseal; no libtss2 build dep). Off by default — needs a
# TPM (or swtpm) and tpm2-tools at runtime. Linux-targeted.
tpm = []

# macOS OS-keystore (Keychain) custody tier — login keychain generic passwords
# (no entitlement needed, unlike Secure Enclave).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

# Linux OS-keystore custody tier — the desktop Secret Service (D-Bus), via the
# pure-Rust zbus backend (no system libdbus needed).
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }

# Windows Named-Pipe transport with an SDDL ACL bound to the current SID.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Credentials",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net", "fs", "time"] }
