[package]
name = "talkrypt-topology"
publish.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
talkrypt-core.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
talkrypt-crypto.workspace = true
talkrypt-transport.workspace = true
