[package]
name = "talkrypt-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
talkrypt-wire.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "sync", "time", "macros"] }
thiserror.workspace = true

# --- optional: real Tor transport via Arti (enabled by the `tor` feature) ---
arti-client = { version = "0.42", default-features = false, features = ["tokio", "rustls", "onion-service-client", "onion-service-service", "bridge-client", "pt-client"], optional = true }
tor-hsservice = { version = "0.42", optional = true }
tor-cell = { version = "0.42", optional = true }
tor-rtcompat = { version = "0.42", default-features = false, features = ["tokio", "rustls"], optional = true }
futures = { version = "0.3", optional = true }
tempfile = { version = "3", optional = true }
safelog = { version = "0.8", optional = true }
# Force SQLite to compile from source (Arti's tor-dirmgr → rusqlite →
# libsqlite3-sys). Without `bundled` the build links the system `-lsqlite3`,
# absent in the Android NDK sysroot, so the cross-compile fails to link. The
# version matches Arti's libsqlite3-sys so Cargo unifies the `bundled` feature.
libsqlite3-sys = { version = "0.37", features = ["bundled"], optional = true }
# Direct rustls handle so we can install a default CryptoProvider (ring) before
# Arti uses TLS — rustls 0.23 panics otherwise when both ring + aws-lc-rs are in
# the graph (feature unification). Version matches Arti's rustls.
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }

[features]
default = []
# Pulls in the (large) Arti dependency tree and enables ArtiTransport.
tor = ["dep:arti-client", "dep:tor-hsservice", "dep:tor-cell", "dep:tor-rtcompat", "dep:futures", "dep:tempfile", "dep:safelog", "dep:libsqlite3-sys", "dep:rustls"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
