[package]
name = "talkrypt-transport"
publish.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
talkrypt-wire.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "sync", "time", "macros"] }
thiserror.workspace = true

# --- optional: real Tor transport via Arti (enabled by the `tor` feature) ---
arti-client = { version = "0.42", default-features = false, features = ["tokio", "rustls", "onion-service-client", "onion-service-service", "bridge-client", "pt-client"], optional = true }
tor-hsservice = { version = "0.42", optional = true }
tor-cell = { version = "0.42", optional = true }
tor-rtcompat = { version = "0.42", default-features = false, features = ["tokio", "rustls"], optional = true }
futures = { version = "0.3", optional = true }
tempfile = { version = "3", optional = true }
safelog = { version = "0.8", optional = true }
# Force SQLite to compile from source (Arti's tor-dirmgr → rusqlite →
# libsqlite3-sys). Without `bundled` the build links the system `-lsqlite3`,
# absent in the Android NDK sysroot, so the cross-compile fails to link. The
# version matches Arti's libsqlite3-sys so Cargo unifies the `bundled` feature.
libsqlite3-sys = { version = "0.37", features = ["bundled"], optional = true }
# Direct rustls handle so we can install a default CryptoProvider (ring) before
# Arti uses TLS — rustls 0.23 panics otherwise when both ring + aws-lc-rs are in
# the graph (feature unification). Version matches Arti's rustls.
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }

# --- optional: Nym mixnet transport (enabled by the `nym` feature) ---
# The `Stream` module (mixnet::stream) is Git-only — the crates.io release
# (v1.20.4) predates it — so we pin a `nymtech/nym` revision rather than a
# crates.io version. This rev is develop @ 2026-06-18, the newest that carries
# the Stream module; re-verify the API used in src/nym.rs when bumping the pin.
#
# Linking nym-sdk alongside Arti forces both monorepo graphs into one binary.
# The shared-crate clashes are resolved WITHOUT downgrading Arti:
#   * getrandom / rand: nym pins =0.3.3 / =0.9.2; both satisfy Arti's caret
#     ranges, so the resolver unifies on them automatically.
#   * libsqlite3-sys (`links = "sqlite3"`): Arti's rusqlite 0.39 needs ^0.37;
#     nym's sqlx-sqlite 0.8.6 capped it at ^0.30.1. Forced to share 0.37 via a
#     vendored sqlx-sqlite whose libsqlite3-sys range is widened to match
#     upstream 0.9.0 (`>=0.30.1, <0.38.0`). See [patch.crates-io] in the
#     workspace-root Cargo.toml and vendor/sqlx-sqlite/.
nym-sdk = { git = "https://github.com/nymtech/nym", rev = "7cee643c8577c21ee002a6044002bfc6789c02fe", optional = true }
# `TicketType` for the paid-bandwidth (zk-nym) flow — pinned to the same rev.
nym-credentials-interface = { git = "https://github.com/nymtech/nym", rev = "7cee643c8577c21ee002a6044002bfc6789c02fe", optional = true }

[features]
default = []
# Pulls in the (large) Arti dependency tree and enables ArtiTransport.
tor = ["dep:arti-client", "dep:tor-hsservice", "dep:tor-cell", "dep:tor-rtcompat", "dep:futures", "dep:tempfile", "dep:safelog", "dep:libsqlite3-sys", "dep:rustls"]
# Pulls in the (large) Nym SDK dependency tree and enables NymTransport.
nym = ["dep:nym-sdk", "dep:nym-credentials-interface"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
