[package]
name = "talkrypt-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "talkrypt-tui"
path = "src/main.rs"

[dependencies]
talkrypt-core.workspace = true
talkrypt-crypto.workspace = true
talkrypt-transport.workspace = true
talkrypt-topology.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
